--- a/sass/partials/shop.scss
+++ b/sass/partials/shop.scss
@@ -239,3 +239,7 @@ li.product:nth-child(2n), .woocommerce-page ul.products[class*=columns-] li.prod
 	    }
 	}
 }
+
+.address-break{
+	display:  block;
+}
